objects/Flight_Plan_Deliverable__c.object
<CustomObject>
    <description>Junction object of Flight plan and deliverable</description>
    <fields>
        <fullName>Conditional_Text__c</fullName>
        <label>Conditional Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conditional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deliverable_Name__c</fullName>
        <formula>Deliverable__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverable Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliverable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deliverable Id</label>
        <referenceTo>Deliverable__c</referenceTo>
        <relationshipName>Flight_Plan_Deliverables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flight_Plan_Name__c</fullName>
        <formula>Flight_Plan__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Plan__c</fullName>
        <label>Flight Plan Id</label>
        <referenceTo>Flight_Plan__c</referenceTo>
        <relationshipName>Flight_Plan_Deliverables_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Flight Plan Deliverable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FPD-{0000000000}</displayFormat>
        <label>FlightPlanDeliverableID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Plan Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>